tests/error_messages/error_messages.exp
Error ----------------------------------------------------------- errors.js:1:12

Cannot resolve name `define`.

Error: errors.js:1
  1: if (typeof define === 'function' && define.amd) { }
                ^^^^^^ Cannot resolve name `define`.


Found 1 error
